# advent-of-code

./: .editorconfig  .gitignore  AdventOfCode.sln  AdventOfCode.sln.DotSettings  Makefile  README.md  flake.nix
.github/: renovate.json
hack/: init-year.sh
shared/dotnet/Util/: Library.fs  Util.fsproj
src/2021/: 2021.sln
src/2021/Day01/: Day01.sln  README.md
src/2021/Day02/: README.md
src/2021/Day03/: README.md
src/2021/Day04/: README.md
src/2021/Day05/: README.md
src/2021/Day06/: README.md
src/2022/: 2022.sln
src/2022/Day01/: Day01.sln  README.md
src/2022/Day02/: Day02.sln  README.md
src/2022/Day03/: Day03.sln  README.md
src/2022/Day04/: Day04.sln  README.md
src/2022/Day05/: Day05.sln  README.md
src/2022/Day06/: Day06.sln  README.md
src/2022/Day07/: Day07.sln  README.md
src/2022/Day08/: Day08.sln  README.md
src/2022/Day09/: Day09.sln  README.md
src/2022/Day10/: Day10.sln  README.md
src/2022/Day11/: Day11.sln  README.md
src/2022/Day12/: Day12.sln  README.md
src/2022/Day13/: Day13.sln  README.md
src/2022/Day14/: Day14.sln  README.md
src/2024/Day01/: README.md
src/2024/Day02/: README.md
src/2024/Day03/: README.md
src/2024/Day04/: README.md
src/2024/Day05/: README.md
src/2024/Day06/: README.md
src/2024/Day07/: README.md
src/2024/Day08/: README.md
src/2024/Day09/: README.md
src/2024/Day10/: README.md
src/2024/Day11/: README.md
src/2024/Day12/: README.md
src/2024/Day13/: README.md
src/2025/Day01/ocaml/: day01.opam  dune-project
src/2025/ocaml/: aoc2025.opam  dune-project
src/2025/ocaml/lib/: day01.ml
(+26 files in other folders)
