(lang dune 3.20)

(name aoc2025)

(generate_opam_files true)

(source
 (github UnstoppableMango/advent-of-code))

(authors "Erik Rasmussen <erik.rasmussen@unmango.dev>")

(maintainers "Erik Rasmussen <erik.rasmussen@unmango.dev>")

(license MIT)

(documentation https://github.com/UnstoppableMango/advent-of-code)

(package
 (name aoc2025)
 (synopsis "Advent of Code 2025")
 (description "Advent of Code 2025 solution in OCaml")
 (depends ocaml)
 (tags
  ("ocaml" "aoc" "advent-of-code" "2025")))
